# dinosaur_smartcar

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  car  go  receiver  smart_car_control  video_receiver.cpp  久久派引脚功能复用表.md
.cursor/: aiconfig.md
config/: .config_0.json.swp  config_0.json  config_1.json  config_2.json
demo/: a.md  程序框架.md
demo/C/: pid.c  pid.h  pwm_ctrl.h
demo/C++/: FuzzyPID.cpp
demo/C库/: pwm_ctrl.c
demo/龙邱/include/: LQ_GPIO.hpp  LQ_GTIM_PWM.hpp  LQ_HW_GPIO.hpp  LQ_HW_PWM.hpp  LQ_HW_SPI.hpp  LQ_MAP_ADDR.hpp  LQ_PWM.hpp  LQ_PWM_ENCODER.hpp  LQ_TFT.hpp  main.hpp
demo/龙邱/src/: LQ_GPIO.cpp  LQ_GTIM_PWM.cpp  LQ_HW_GPIO.cpp  LQ_HW_PWM.cpp  LQ_HW_SPI.cpp  LQ_MAP_ADDR.cpp  LQ_PWM.cpp  LQ_PWM_ENCODER.cpp  LQ_TFT.cpp
demo/龙邱/test/: LQ_ADC_Test.cpp  LQ_Cam_Test.cpp  LQ_Delay_Test.cpp  LQ_Pwm_Test.cpp  (+8 more)
include/: FuzzyPID.h  GPIO.h  core.h  data_config.h  encoder.h  head_system.h  key.h  main.h  pid.h  pwm_ctrl.h  register.h  tty.h
lib/control/: GPIO.cpp  encoder.cpp  memory.cpp  memory.h  pwm_ctrl.cpp  pwm_ctrl.h  tty.cpp  udp.cpp  udp.h
lib/logic/: data_process.cpp  data_process.h  image_process.cpp  image_process.h  path.h  path_across.cpp  path_circle.cpp  path_side_search.cpp  pid.cpp  pid.h
lib/zf_common/: zf_common_font.cpp  zf_common_headfile.h  zf_common_typedef.h
lib/zf_device/: zf_device_imu660ra.cpp  zf_device_imu_core.cpp  zf_device_imu_core.h  zf_device_ips200_fb.cpp  zf_device_ips200_fb.h
libs/: pwm_ctrl.c  pwm_ctrl.h
src/: GPIO.cpp  core.cpp  encoder.cpp  globle.cpp  key.cpp  main.c  main.cpp  pid.cpp  program.cpp  pwm_ctrl.cpp  thread.cpp  tty.cpp
